--- a/menu.html
+++ b/menu.html
@@ -30,20 +30,190 @@
       <button onclick="filterMenu('dessert')">Desserts</button>
     </div>
     <div class="menu-items">
+      <!-- Appetizers -->
       <div class="menu-item appetizer">
+        <div><img src="springroools.jpg" alt=""></div>
         <h3>Spring Rolls</h3>
         <p>Light and crispy.</p>
         <span>$5.99</span>
       </div>
+
+      <!-- Classic Appetizers -->
+      <div class="menu-item appetizer">
+        <div><img src="Homemade-Mozzarella-Sticks-Recipe-1-of-1.jpg" alt=""></div>
+        <h3>Mozzarella Sticks</h3>
+        <p>Fried cheese with marinara sauce.</p>
+        <span>$6.50</span>
+      </div>
+      <div class="menu-item appetizer">
+        <div><img src="featured-buffalo-wings-recipe.jpg" alt=""></div>
+        <h3>Buffalo Chicken Wings</h3>
+        <p>Spicy wings served with ranch dip.</p>
+        <span>$7.99</span>
+      </div>
+
+      <!-- Asian Appetizers -->
+      <div class="menu-item appetizer">
+        <div><img src="fried-gyoza-min.jpg" alt=""></div>
+        <h3>Fried Dumplings</h3>
+        <p>Stuffed with pork and veggies.</p>
+        <span>$6.99</span>
+      </div>
+      <div class="menu-item appetizer">
+        <div><img src="tempura shrimp.jpg" alt=""></div>
+        <h3>Tempura Shrimp</h3>
+        <p>Golden and crispy Japanese-style shrimp.</p>
+        <span>$8.25</span>
+      </div>
+
+      <!-- Mediterranean Appetizers -->
+      <div class="menu-item appetizer">
+        <div><img src="Hummuus w pita.jpg" alt=""></div>
+        <h3>Hummus with Pita</h3>
+        <p>Chickpea dip served with warm pita bread.</p>
+        <span>$5.75</span>
+      </div>
+      <div class="menu-item appetizer">
+        <div><img src="falafel balls.webp" alt=""></div>
+        <h3>Falafel Balls</h3>
+        <p>Deep-fried chickpea patties served with tahini.</p>
+        <span>$6.25</span>
+      </div>
+
+      <!-- Upscale/Modern Appetizers -->
+      <div class="menu-item appetizer">
+        <div><img src="tuna tartare.webp" alt=""></div>
+        <h3>Tuna Tartare</h3>
+        <p>Fresh tuna with avocado on wonton crisps.</p>
+        <span>$9.99</span>
+      </div>
+      <div class="menu-item appetizer">
+        <div><img src="baked brie.jpg" alt=""></div>
+        <h3>Baked Brie</h3>
+        <p>Warm brie with cranberry sauce.</p>
+        <span>$8.75</span>
+      </div>
+
+      <!-- Existing Main Course -->
       <div class="menu-item main">
+        <div><img src="grilled chicken.jpg" alt=""></div>
         <h3>Grilled Chicken</h3>
         <p>Served with vegetables.</p>
         <span>$12.99</span>
       </div>
+
+      <!-- New Main Courses -->
+
+      <!-- Classic Western Mains -->
+      <div class="menu-item main">
+        <div><img src="Grilled-Ribeye-480x480.jpg" alt=""></div>
+        <h3>Grilled Ribeye Steak</h3>
+        <p>Juicy steak with garlic butter and mashed potatoes.</p>
+        <span>$19.99</span>
+      </div>
+      <div class="menu-item main">
+        <div><img src="BBQ rib.webp" alt=""></div>
+        <h3>BBQ Ribs</h3>
+        <p>Slow-cooked ribs glazed with house BBQ sauce.</p>
+        <span>$17.50</span>
+      </div>
+
+      <!-- Italian Mains -->
+      <div class="menu-item main">
+        <div><img src="SpagehetiCarbonara.avif" alt=""></div>
+        <h3>Spaghetti Carbonara</h3>
+        <p>Creamy pasta with pancetta and parmesan cheese.</p>
+        <span>$13.75</span>
+      </div>
+      <div class="menu-item main">
+        <div><img src="Classic Lasagna.jpg" alt=""></div>
+        <h3>Classic Lasagna</h3>
+        <p>Layered pasta with rich beef ragu and béchamel sauce.</p>
+        <span>$14.99</span>
+      </div>
+
+      <!-- Indian Mains -->
+      <div class="menu-item main">
+        <div><img src="easy-butter-chicken-image1-197844-1.jpg" alt=""></div>
+        <h3>Butter Chicken</h3>
+        <p>Creamy tomato gravy served with naan or rice.</p>
+        <span>$13.50</span>
+      </div>
+      <div class="menu-item main">
+        <div><img src="Palak-paneer-7.jpg" alt=""></div>
+        <h3>Palak Paneer</h3>
+        <p>Spinach curry with cottage cheese cubes. (Vegetarian)</p>
+        <span>$12.25</span>
+      </div>
+
+      <!-- Asian Mains -->
+      <div class="menu-item main">
+        <div><img src="chicken-teriyaki-recipe.jpg" alt=""></div>
+        <h3>Chicken Teriyaki</h3>
+        <p>Grilled chicken glazed with teriyaki sauce over rice.</p>
+        <span>$12.75</span>
+      </div>
+      <div class="menu-item main">
+        <div><img src="pf-changs-beef-and-broccoli-feature.jpg" alt=""></div>
+        <h3>Beef & Broccoli</h3>
+        <p>Stir-fried in savory garlic soy sauce, served with rice.</p>
+        <span>$13.25</span>
+      </div>
+
+      <!-- Existing Dessert -->
       <div class="menu-item dessert">
+        <div><img src="chocolate_cake.jpg" alt=""></div>
         <h3>Chocolate Cake</h3>
         <p>Rich and moist.</p>
         <span>$6.50</span>
+      </div>
+
+      <!-- Classic Desserts -->
+      <div class="menu-item dessert">
+        <div><img src="New-York-Cheesecake-Recipe-2.jpg" alt=""></div>
+        <h3>New York Cheesecake</h3>
+        <p>Classic cheesecake with a graham cracker crust.</p>
+        <span>$6.99</span>
+      </div>
+      <div class="menu-item dessert">
+        <div><img src="warmApplePie.jpg" alt=""></div>
+        <h3>Warm Apple Pie</h3>
+        <p>Served with a scoop of vanilla ice cream.</p>
+        <span>$5.99</span>
+      </div>
+
+      <!-- Frozen Desserts -->
+      <div class="menu-item dessert">
+        <div><img src="IceCreamSundae.jpg" alt=""></div>
+        <h3>Ice Cream Sundae</h3>
+        <p>Three scoops with chocolate syrup and sprinkles.</p>
+        <span>$5.50</span>
+      </div>
+      <div class="menu-item dessert">
+        <div><img src="Traditional-Italian-gelato-222-1024x768.webp" alt=""></div>
+        <h3>Italian Gelato</h3>
+        <p>Choose from pistachio, chocolate, or strawberry.</p>
+        <span>$5.75</span>
+      </div>
+
+      <!-- Specialty & International Desserts -->
+      <div class="menu-item dessert">
+        <div><img src="tiramisu-4583.jpg" alt=""></div>
+        <h3>Tiramisu</h3>
+        <p>Espresso-soaked ladyfingers layered with mascarpone cream.</p>
+        <span>$6.99</span>
+      </div>
+      <div class="menu-item dessert">
+        <div><img src="gulab-jamun-80285-1.jpeg" alt=""></div>
+        <h3>Gulab Jamun</h3>
+        <p>Sweet Indian dumplings soaked in rose syrup.</p>
+        <span>$4.99</span>
+      </div>
+      <div class="menu-item dessert">
+        <div><img src="Mochi-Ice-Cream.jpg" alt=""></div>
+        <h3>Mochi Ice Cream</h3>
+        <p>Japanese rice cakes filled with flavored ice cream.</p>
+        <span>$5.25</span>
       </div>
     </div>
   </main>
