--- a/reservation.html
+++ b/reservation.html
@@ -9,16 +9,18 @@
 <body>
   <header>
     <nav>
-      <h1>Skakerdo Restaurant</h1>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        <li><a href="reservation.html">Reservation</a></li>
-        <li><a href="order.html">Order Online</a></li>
-      </ul>
-    </nav>
+  <h1>Skakerdo Restaurant</h1>
+  <button class="hamburger" onclick="toggleMenu()">☰</button>
+  <ul id="navLinks">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="menu.html">Menu</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
+    <li><a href="reservation.html">Reservation</a></li>
+    <li><a href="order.html">Order Online</a></li>
+  </ul>
+</nav>
+
   </header>
 
   <main>
