--- a/menu.html
+++ b/menu.html
@@ -7,21 +7,23 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <nav>
-  <h1>Skakerdo Restaurant</h1>
-  <button class="hamburger" onclick="toggleMenu()">☰</button>
-  <ul id="navLinks">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="menu.html">Menu</a></li>
-    <li><a href="about.html">About Us</a></li>
-    <li><a href="contact.html">Contact Us</a></li>
-    <li><a href="reservation.html">Reservation</a></li>
-    <li><a href="order.html">Order Online</a></li>
-  </ul>
-</nav>
+ <header>
+  <nav>
+    <div class="nav-container">
+      <button class="hamburger" onclick="toggleMenu()">☰</button>
+      <h1>Skakerdo Restaurant</h1>
+    </div>
+    <ul id="navLinks">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="reservation.html">Reservation</a></li>
+      <li><a href="order.html">Order Online</a></li>
+    </ul>
+  </nav>
+</header>
 
-  </header>
 
   <main>
     <h2>Our Menu</h2>
